# slang

./: Makefile  README.md  prelude.slang  pyproject.toml  slang.ebnf  test.slang
examples/: factorial.slang
slang/: compiler.py  parser.py  pretty.py  runtime.py  slang  slang.py
slang/syntax/: __init__.py  terms.py  types.py  values.py
tests/: test_slang.py
vim/: slang.vim
