[tool.poetry]
name = "slang"
version = "0.1.0"
description = ""
authors = ["John Connor <john.theman.connor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tatsu = "^5.6.1"
simplejson = "^3.17.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
neovim = "^0.3.1"
black = "^21.9b0"
types-simplejson = "^3.17.0"
pyre-check = "^0.9.10"
pyright = "^1.1.226"

[tool.poetry.scripts]
slang = 'slang.slang:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
